Added updated file 1-index.html 1-styles.css 2-index.html 3-index.html 6-index.html  6-styles.css  7-index.html  7-styles.css

--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -18,6 +18,7 @@ header {
   background-image: url(./images/headphones_hero_1.jpg);
   background-position: center;
   height: 128vh;
+  
 }
 
 /* HEADER NAV */
@@ -116,8 +117,10 @@ ul.topnav li {float: left;}
 
 
 .what-we-do {
-    padding-bottom: 5rem;
+    padding:;
     text-align: center;
+    background-color: white;
+    color: black;
     
 }
 
