--- a/headphones/6-styles.css
+++ b/headphones/6-styles.css
@@ -6,129 +6,352 @@
   box-sizing: border-box;
 }
 
+
 body {
-  font-family: sans-serif;
-  box-sizing: border-box;
-  margin: auto;
+  /* padding: 40px; */
+  text-align: center;
 }
 
-/* HEADER SECTION STYLING */
-header {
-  background: linear-gradient(transparent, #071629);
+.hero-section {
   background-image: url(./images/headphones_hero_1.jpg);
-  background-position: center;
-  height: 128vh;
+  /* background-position: center; */
+  height: 802.5px;
+  color: white;
+  padding: 10px;
+
+
 }
 
-/* HEADER NAV */
-header nav {
+.hero-header {
+
+  padding: 40px 200px;
+
+
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 20px;
+  align-items: center;
+  justify-content: space-between;
+
+  @media screen and (max-width: 908px) {
+    padding: 20px 50px;
+  }
+
+  @media screen and (max-width: 500px) {
+    padding: 10px;
+  }
 }
 
-header nav img {
+.hero-header img {
+  height: 31.18px;
+  width: 161.38px;
+
+  @media screen and (max-width: 500px) {
+    padding: 0;
+    text-align: center;
+    /* margin-left: 8px; */
+  }
+}
+
+svg {
   height: 40px;
+  width: 40px;
+  display: none;
+
+  @media screen and (max-width: 500px) {
+    display: block;
+    align-self: left;
+  }
 }
 
-.logo {
-  margin-right: 600px;
-}
-
-header nav ul {
+.nav ul {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  align-items: center;
+  gap: 40px;
+  list-style: none;
+
+  @media screen and (max-width: 600px) {
+    gap: 20px;
+
+  }
+
+  @media screen and (max-width: 500px) {
+    display: none;
+
+  }
+}
+
+.nav ul li {
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+.nav ul li:hover {
+  color: #ff6565;
+
+}
+
+.hero-headings {
+  margin-top: 250px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 16px;
+}
+
+button {
+  text-transform: uppercase;
+  width: 162px;
+  height: 44px;
+  border: none;
+  border-radius: 50px;
+  margin-top: 40px;
+  background-color: #ff6565;
+  color: #ffffff;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+button:hover {
+
+  transform: translate3d(0, -5px, 0);
+  opacity: 0.9;
+}
+
+.text-desc {
+  padding: 40px 500px;
+  margin-top: 20px;
+
+  @media screen and (max-width: 908px) {
+    padding: 20px 100px;
+
+  }
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .hero-section {
+    background-size: cover;
+    background-position: center;
+    /* padding: 10pc 20px; */
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero-section {
+    padding: 0;
+  }
+
+  .text-desc {
+
+    padding: 0;
+  }
+
+  svg {
+    display: block;
+  }
+}
+
+
+/* general styling */
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex_col {
+  display: flex;
+  flex-direction: column;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: auto;
+  gap: 40px;
+}
+
+
+.ul {
   list-style: none;
 }
 
-header nav ul li a {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 15.08px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  color: #ffff;
-  text-decoration: none;
-  transition: color 0.3s ease;
+/* What we do section */
+.what-we-do-section {
+  margin-top: 200px;
+
+  gap: 40px;
+  padding: 40px;
+  text-align: center;
+  line-height: 1.5;
 }
 
-nav ul li a:hover,
-nav ul li a:active {
-  color: #FF6565;
+.what-we-do-paragraph {
+
+  text-align: center;
+  padding: 40px;
 }
-
-/* PROFESSIONAL SECTION */
-#section-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem; /* Adds spacing between child elements */
-    margin-top: 100px;
-    color:#ffff;
-}
-
-.section-1-header {
-  margin-top: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.para1 {
-    text-align: center;
-    max-width: 600px;
-    line-height: 1.6;
-    margin-top: 20px; 
-}
-
-.button {
-  width: 162px;
-  height: 44px;
-  margin-top: 5px;
-  margin-bottom: 8px;
-  color: #ffff;
-  background-color: #FF6565;
-  border-radius: 20px;
-  font-size: 12px;
-  font-weight: 600;
-  padding: 5px;
-  border: none;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  margin: 20px 0;
-}
-
-.button:hover,
-.button:active {
-  opacity: 0.9;
-  color: #bb9797;
-  background-color: #FF6565;
-}
-
-ul.topnav li.right {float: right;}
-ul.topnav li {float: left;}
-
 
 .what-we-do {
-    padding-bottom: 5rem;
-    text-align: center;
-    
+  padding: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: auto;
+  gap: 40px;
 }
 
-.what-we-do h1{
-text-align: center;
+.what-we-do img {
+  width: 60px;
+  height: 60px;
+  transition: all 0.5s ease-in-out;
+}
+
+.what-we-do img:hover {
+  transform: rotate(180deg);
+
+}
+
+.what-we-do-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 60px;
+}
+
+.what-we-do-item p {
+  text-align: center;
 }
 
 
-/* MOBILE STYLING */
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
+/* Our results section */
+
+.our-results-section {
+  background-image: url(./images/headphones_hero_2.jpg);
+  background-position: center;
+  background-size: cover;
+  /* height: 802.5px; */
+  padding: 40px;
+  text-align: center;
+  color: #ffffff;
+  gap: 60px;
+  justify-content: center;
+
 }
 
+.our-results-section h1 {
+  margin-top: 100px;
+}
+
+.pentagon {
+  padding: 40px;
+  justify-items: center;
+
+}
+
+.pentagon-image {
+  width: 190px;
+  height: 190px;
+  background: #ff6565;
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease-in;
+}
+
+.pentagon-image:hover {
+  transform: scale(1.1);
+}
+
+.pentagon-image::before {
+
+  color: #ffffff;
+  content: " +2%";
+  position: absolute;
+  font-size: 40px;
+  font-weight: 800;
+
+  top: 30%;
+  left: 30%;
+
+}
+
+.pentagon-image::after {
+  color: #ffffff;
+  content: " lorem ipsum codet";
+  position: absolute;
+  font-size: 16px;
+  top: 60%;
+  left: 20%;
+}
+
+.pentagon-desc {
+  padding: 40px;
+  gap: 20px;
+  position: absolute;
+
+}
+
+
+/* Contact section */
+
+
+form {
+  padding: 60px;
+  align-items: center;
+  gap: 40px;
+  margin-top: 60px;
+}
+
+input {
+  width: 335px;
+  border: none;
+  border-bottom: #979797 solid 1px;
+  padding: 10px;
+}
+
+
+/* Footer */
+
+footer {
+  background-color: #071629;
+  color: #ffffff;
+  padding: 40px;
+  text-align: center;
+}
+
+.footer {
+  padding: 100px 20px;
+  align-items: center;
+
+  @media screen and (max-width: 455px) {
+    flex-direction: column;
+    gap: 40px;
+  }
+}
+
+.footer-logo img {
+
+  width: 161px;
+  height: 32px;
+}
+
+.footer-socials {
+  align-self: center;
+  gap: 20px;
+}
+
+.footer-socials img {
+  cursor: pointer;
+}
